# mpms-analyzer

./: Anton_SrCu_symmetric.py  Constants.py  Controller.py  LICENSE  README.md  build.bat  class-diagrams.html  diskussion_Anton_SrCu.py  fit_squid_parameter.py  klassendiagramme.py  my_utilities.py  quick_remove_background.py  setup.cfg  test.py  tool_background_creation.py  tool_background_remove.py  tool_datapoint_cut.py  tool_datapoint_viewer.py  tool_export.py  tool_format_data.py
DataHandling/: DataContainer.py  DataPoint.py  FileOpeningWorker.py  PlotData.py  ToolWorker.py  calculation.py
MPMSAnalyzer/: tool_background_remove.py  tool_datapoint_cut.py  tool_export.py
MPMSAnalyzer/DataHandling/: DataContainer.py  DataPoint.py  FileOpeningWorker.py  calculation.py
MPMSAnalyzer/View/: MainWindow.py  PlotWindow.py  SelectDataContainerWidget.py
MPMSAnalyzer/View/ToolWizard/: BackgroundSubtractionTool.py  Tool.py  ToolWizard.py
MPMSAnalyzer/icons/: icon_window_icon.xcf
View/: AboutDialog.py  DataContainerWidget.py  DataPointViewer.py  MainWindow.py  PlotCanvas.py  PlotMenuFactory.py  PlotWindow.py  PreferencesDialog.py  QCollapsableWidget.py  SelectDataContainerWidget.py
View/ToolWizard/: BackgroundCreationTool.py  BackgroundSubtractionTool.py  DataPointCutTool.py  FormatDataTool.py  Tool.py  ToolAxisPage.py  ToolCSVExportPage.py  ToolInputPage.py  ToolOutputPage.py  ToolPlotPage.py  ToolWizard.py
icons/: icon_window_icon_2.xcf
src/: Controller.py  quick_remove_background.py
src/DataHandling/: PlotData.py  ToolWorker.py
src/MPMSAnalyzer/: Constants.py  __main__.py  fit_squid_parameter.py  my_utilities.py  test.py  tool_background_creation.py  tool_datapoint_viewer.py  tool_format_data.py
src/MPMSAnalyzer/View/: DataContainerWidget.py  MainWindow.py  PlotCanvas.py  PlotMenuFactory.py  QCollapsableWidget.py
src/MPMSAnalyzer/View/ToolWizard/: BackgroundCreationTool.py  FormatDataTool.py  ToolAxisPage.py  ToolCSVExportPage.py  ToolOutputPage.py  ToolPlotPage.py
src/View/: AboutDialog.py  DataPointViewer.py  PlotMenuFactory.py  PreferencesDialog.py
src/View/ToolWizard/: DataPointCutTool.py  ToolInputPage.py
