[metadata]
name=MPMSAnalyzer
version=0.1.2
author=miile7
author_email=miile7@gmx.de
description=A python program for analyzing SQUID DC raw data
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/miile7/mpms-analyzer
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    License :: Free For Educational Use
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
include_package_data=True
packages=find:
python_requires= >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = Controller:launch

[options.data_files]
data = src/MPMSAnalyzer/icons/*