[metadata]
name=MPMSAnalyzer
version=0.1.12
author=miile7
author_email=miile7@gmx.de
description=A python program for analyzing SQUID DC raw data
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/miile7/mpms-analyzer
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    License :: Free For Educational Use
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir=
    =src
packages=find:
python_requires=>=3.7
install_requires=
    matplotlib>=3.1.3
    PyQt5>=5.9.2
    sip>=4.19.8
    scipy>=1.4.1
    numpy>=1.18.1
    formlayout>=1.2.0

[options.package_data]
* = *.jpg, *.png, *.svg, *.ico, *.md

[options.packages.find]
where=src

[options.data_files]
MPMSAnalyzer/icons=src/MPMSAnalyzer/icons/*